syntax = "proto3";

package user;

option go_package = ".;pb";

message User {
  uint64 id = 1;
  string name = 2;
  uint64 age = 3;
}

message CreateUserRequest {
  string name = 1;
  uint64 age = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {};
}


